scss/style.scss
@use "sass:map";
@use "sass:math";
@import "../css/main.css";
@import "../css/normalize.css";
@import "../css/fonts.css";

$background-color: rgb(142, 216, 216);
$linkColorHover: #33cccc;
$mainColor1: #2b456b;
$mainColor2: #3a6289;
$contrastColor: #ffff;
$contrastColor2: #bacccb;
$linkColor: $contrastColor;
$padding: 40px;
$navbarWidth: 250px;
$logoWidth: 150px;
$burgerMenuWidth: $logoWidth * 0.5;
$burgerMenuHeight: $burgerMenuWidth * 0.75;
$positionNavbarCloseIconCenter: $navbarWidth * 0.5 - $burgerMenuWidth * 0.5;

$screensize-list: (
  xs: 0,
  sm: 576px,
  md: 768px,
  lg: 992px,
  xl: 1200px,
  xxl: 1400px,
);

@mixin rule-with-screensize($rule, $size) {
  #{$rule}: map.get($screensize-list, $size);
}

@mixin layout-for-screensize($size) {
  @media (min-width: map.get($screensize-list, $size)) {
    @content;
  }
}

@mixin padding(
  $top: $padding,
  $right: $padding,
  $bottom: $padding,
  $left: $padding
) {
  padding: $top $right $bottom $left;
}

:root {
  --navbar-horizontal-position: flex-end;
  --navbar-vertical-position: start;
  --navbar-position: fixed;
  --display-header-text: none;
  --header-font-size: 14pt;
  --header-font-size-small: 10pt;
  --header-line-height: 30pt;
  --header-line-height-small: 20pt;
  --navbar-display-icon: flex;
  --navbar-width: #{$navbarWidth};
  --navbar-linkContainer-flex-direction: column;
  --navbar-linkContainer-height: 50vh;
  --navbar-background-color: #{$mainColor1};
  --hover-link-color: #{$linkColor};
  --hover-underline-link: 0;
  --hover-burgermenu-color: #{$contrastColor};
  --navbar-link-column-gap: 25%;
  --navbar-link-row-gap: 0;
}

@include layout-for-screensize(md) {
  :root {
    --header-font-size: 22pt;
    --header-font-size-small: 15pt;
    --header-line-height: 42pt;
    --header-line-height-small: 28pt;
    --navbar-background-color: none;
    --navbar-linkContainer-flex-direction: row;
    --navbar-linkContainer-height: fit-content;
    --navbar-vertical-position: start;
    --navbar-position: static;
    --display-header-text: block;
    --navbar-display-icon: none;
    --navbar-width: fit-content;
    --navbar-height: auto;
    --navbar-link-column-gap: 0;
    --navbar-link-row-gap: 0.9rem;
  }
}

@media (pointer: coarse) {
  :root {
    --navbar-horizontal-position: flex-end;
    --navbar-vertical-position: start;
    --navbar-position: fixed;
    --navbar-display-icon: flex;
    --navbar-width: #{$navbarWidth};
    --navbar-linkContainer-flex-direction: column;
    --navbar-linkContainer-height: 50vh;
    --navbar-background-color: #{$mainColor1};
    --navbar-link-column-gap: 21%;
    --navbar-link-row-gap: 0;
  }
}

@media (hover: hover) {
  :root {
    --hover-link-color: #{$linkColorHover};
    --hover-burgermenu-color: #{$linkColorHover};
    --hover-underline-link: 100%;
  }
}

@mixin logoSizes-for-big-screens(
  $width: null,
  $height: null,
  $navbarPositionTop: null,
  $centerCloseIcon: null,
  $burgerMenuPositionRight: null
) {
  @if $width and $height {
    width: $width;
    height: $height;
    @media (min-width: map.get($screensize-list, md)) {
      width: $width * 1.33;
      height: $height * 1.33;
    }
  } @else if $width {
    width: $width;
    @media (min-width: map.get($screensize-list, md)) {
      width: $width * 1.33;
    }
  } @else if $height {
    height: $height;
    @media (min-width: map.get($screensize-list, md)) {
      height: $height * 1.33;
    }
  } @else if $burgerMenuPositionRight {
    right: $burgerMenuPositionRight;
    @media (min-width: map.get($screensize-list, md)) {
      right: $burgerMenuPositionRight * 1.33;
    }
  } @else if $navbarPositionTop {
    margin-top: $navbarPositionTop + 2 * $padding;
    @media (min-width: map.get($screensize-list, md)) {
      margin-top: $navbarPositionTop * 1.33 + 2 * $padding;
    }
    @include layout-for-screensize(md) {
      margin-top: 0;
    }
    @media (pointer: coarse) {
      margin-top: $navbarPositionTop + 2 * $padding;
    }
  } @else {
    content: "add at least one parameter to logosize mixin";
  }
}

body {
  font-family: "Louis_George_Cafe";
}

button {
  border: 0;
  background-color: transparent;
}
.header-grid
  .headerLogoWrapper
  + .CenterHeaderNav
  .headerNavContainer
  nav
  ul
  .linkLiElement {
  display: flex;
  justify-content: center;
  a {
    display: flex;
    width: fit-content;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-decoration: none;
    font-size: 16pt;
    transition: color 0.2s ease;
    color: $contrastColor;
    &:hover {
      color: var(--hover-link-color);
      .hoverBorder {
        width: var(--hover-underline-link);
      }
    }
  }
}

.hoverBorder {
  width: 0;
  height: 10px;
  background-color: $linkColorHover;
  transition: width 0.2s ease-in-out;
}

.drop-shadow {
  filter: drop-shadow(1px 2px 3px rgba(0, 0, 0, 0.3));
}
.pageheader {
  background-image: url(../img/test2_blur.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: left;
  background-attachment: fixed;
  min-height: 100vh;
  position: relative;
  .overlay {
    position: absolute;
    height: 100%;
    width: 100%;
    background-color: black;
    opacity: 0.7;
  }
  .pageHeaderWrapper {
    @include padding($right: 0);
    .headMediumCaption {
      font-variant: small-caps;
      font-size: var(--header-font-size);
      line-height: var(--header-line-height);
      color: $contrastColor;
      letter-spacing: 1.5pt;
    }

    .headSmallCaption {
      font-size: var(--header-font-size-small);
      line-height: var(--header-line-height-small);
      color: $contrastColor;
      letter-spacing: 1pt;
      font-weight: 500;
    }
  }
}

header {
  position: absolute;
  z-index: 1;
  width: 100%;
}

.header-grid {
  width: 100%;
  display: grid;
  grid-template-columns: auto 1fr;
  align-items: var(--navbar-vertical-position);
  @include padding($left: 0);
  transition: all 0.4s ease;
  &.open {
    .CenterHeaderNav {
      .headerNavContainer {
        overflow: visible;
        nav {
          right: 0;
          background-color: var(--navbar-background-color);
          + .burgerMenu {
            position: relative;
            .line {
              margin: 0;
            }
            .line1 {
              transform: rotate(-45deg);
              width: 100%;
            }
            .line2 {
              opacity: 0;
              height: 0;
            }
            .line3 {
              opacity: 0;
              height: 0;
            }
            .line4 {
              transform: rotate(45deg);
              width: 100%;
            }
          }
        }
      }
    }
  }
  .headerLogoWrapper {
    grid-column: 1;
    display: flex;
    align-items: center;
    padding-left: $padding;
    .mainLogoLink {
      width: fit-content;
      height: min-content;
      &:hover {
        opacity: 1;
      }
      img {
        @include logoSizes-for-big-screens($width: $logoWidth);
      }
    }
    span {
      font-family: Louis_George_Cafe_Light;
      letter-spacing: 3px;
      font-style: italic;
    }
  }
  .CenterHeaderNav {
    display: flex;
    grid-column: 2;
    justify-content: flex-end;
    .headerNavContainer {
      display: grid;
      width: fit-content;
      height: fit-content;
      overflow: hidden;
      transition: all 0.5s ease;
      &.deactivateTransition {
        transition: margin-right 0s ease;
      }
      .burgerMenu {
        display: var(--navbar-display-icon);
        flex-direction: column;
        @include logoSizes-for-big-screens($width: $burgerMenuWidth);
        @include logoSizes-for-big-screens($height: $burgerMenuHeight);
        justify-content: center;
        cursor: pointer;
        color: $contrastColor;
        .line {
          margin-bottom: 21%;
          &:last-child {
            margin-bottom: 0;
          }
        }
        &:hover .line {
          background-color: var(--hover-burgermenu-color);
        }
        .line {
          background-color: $contrastColor;
          height: 2px;
          transition: all 0.5s ease, opacity 0.3s, height 0.5s;
        }
        .line1 {
          width: 100%;
        }
        .line2 {
          width: 75%;
        }
        .line3 {
          width: 100%;
        }
        .line4 {
          width: 75%;
        }
      }
      nav {
        display: flex;
        justify-content: center;
        position: var(--navbar-position);
        top: 0;
        right: -$navbarWidth;
        width: var(--navbar-width);
        height: 100%;
        transition: all 0.4s ease;
        ul {
          display: flex;
          justify-content: center;
          flex-direction: var(--navbar-linkContainer-flex-direction);
          @include logoSizes-for-big-screens(
            $navbarPositionTop: $burgerMenuHeight
          );
          li {
            height: 100%;
            max-height: 150px;
            margin-right: var(--navbar-link-row-gap);
            margin-bottom: var(--navbar-link-column-gap);
            &:last-child {
              margin-right: 0;
            }
          }
        }
      }
    }
  }
}

.contentBox {
  @include rule-with-screensize(max-width, xl);
  margin-right: auto;
  margin-left: auto;
}

.responsiveWrapper {
  @include padding();
}

.sectionResponsive {
  background-color: $mainColor2;
  h1 {
    color: $contrastColor2;
  }
}

